--- a/.gitignore
+++ b/.gitignore
@@ -11,11 +11,13 @@
 
 # misc
 .DS_Store
+/.idea
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.koa-incache
 
 npm-debug.log*
 yarn-debug.log*
