--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "3.0.1",
   "private": true,
   "scripts": {
+    "start:api": "node api/index.js",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "start:prod": "node scripts/startProd.js",
+    "start:prod": "NODE_ENV=production node scripts/startProd.js",
     "lint": "eslint src/**/*.js",
     "format": "prettier --write \"src/**/*.{js,json,css,md}\"",
     "docker:build": "docker build --rm -t cullenjett/react-ssr-boilerplate .",
@@ -36,6 +37,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.4.0",
     "@babel/runtime": "^7.4.3",
+    "@koa/cors": "^3.0.0",
     "autoprefixer": "^9.5.1",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
@@ -45,7 +47,9 @@
     "chalk": "^2.4.2",
     "compression": "^1.7.4",
     "core-js": "^3.0.1",
+    "cross-fetch": "^3.0.2",
     "css-loader": "^2.1.1",
+    "dateformat": "^3.0.3",
     "dotenv": "^7.0.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.12.1",
@@ -63,6 +67,9 @@
     "husky": "^1.3.1",
     "import-glob-loader": "^1.1.0",
     "jest": "^24.7.1",
+    "koa": "^2.7.0",
+    "koa-incache": "^0.5.0",
+    "koa-router": "^7.4.0",
     "lint-staged": "^8.1.5",
     "lodash-webpack-plugin": "^0.11.5",
     "mini-css-extract-plugin": "^0.6.0",
@@ -82,6 +89,7 @@
     "react-router-dom": "^5.0.0",
     "react-test-renderer": "^16.8.6",
     "redux": "^4.0.1",
+    "redux-actions": "^2.6.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "response-time": "^2.3.2",
@@ -120,5 +128,9 @@
     "transformIgnorePatterns": [
       "[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$"
     ]
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-prettier": "^3.0.1"
   }
 }
